# pub-sub-task

./: .env.example  README.md  docker-compose.yaml  pyproject.toml
data/: articles.json
src/consumer/: Dockerfile  main.py  scraper.py
src/publisher/: Dockerfile  main.py
src/shared/: config.py  database.py  logger.py  models.py
