[project]
name = "pub-sub-task"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
  "beautifulsoup4>=4.14.3",
  "httpx>=0.28.1",
  "lxml>=6.0.2",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "pymongo>=4.16.0",
  "redis>=7.1.0",
  "structlog>=25.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared", "src/publisher", "src/consumer"]

[tool.ruff]
line-length = 100

[tool.rumdl.MD013]
line_length = 200
